Improved pagination and book repository